Remove NoRoute status for subnets
